tekton/dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
spec:
  ingressClassName: nginx
  rules:
    - host: tkn-dashboard.192.168.49.2.nip.io
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: tekton-dashboard
                port:
                  number: 9097
